08_hellofxn/notes.txt
Orion Roven
APCS
HW08 08_helloclass
9-30-21

Greet.java:1: error: class greet is public, should be declared in a file named greet.java
public class greet{
       ^
Greet.java:3: error: 'void' type not allowed here
		System.out.println(greet("no hablo queso"));
		                        ^
2 errors

Greet.java:5: error: <identifier> expected
	void greet(String) {
	                 ^
1 error

public static void greet(String x)
I didn't realize I needed to have String x, then print x, rather than just String and then print String